data/derived/comb/progs/unify/prog4511.ml.out
Characters 182-186:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type 'a list -> ('b * 'a) list
       but an expression was expected of type 'c list
